--- a/core/pom.xml
+++ b/core/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>team.isaz.ark</groupId>
+            <artifactId>sinsystem</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
