--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>user</module>
         <module>core</module>
         <module>libs</module>
+        <module>gateway</module>
+        <module>eureka</module>
     </modules>
 
 </project>
