--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -18,6 +18,15 @@ spring:
       hibernate:
         default_schema: main
 
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
+    lease-expiration-duration-in-seconds: 90
+    lease-renewal-interval-in-seconds: 30
+
 feign:
   client.config.default:
     readTimeout: 15000
@@ -26,7 +35,6 @@ feign:
       enabled: false
   core:
     name: core
-    url: http://localhost:30301/
 
 jwt:
   secret: jwtsecretword
