--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -8,14 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>team.isaz.ark</groupId>
-    <artifactId>eureka</artifactId>
+    <artifactId>gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka</name>
-    <description>eureka app</description>
+    <name>gateway</name>
+    <description>Gateway</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <spring.cloud.version>2.2.2.RELEASE</spring.cloud.version>
         <springdoc.version>1.4.1</springdoc.version>
         <slf4j-api.version>1.7.25</slf4j-api.version>
         <spring.boot.version>2.3.0.RELEASE</spring.boot.version>
@@ -36,14 +35,26 @@
     </dependencyManagement>
 
     <dependencies>
-        <!--Spring Cloud Framework-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.code.gson</groupId>
@@ -51,28 +62,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <!--gson-->
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
-        </dependency>
-        <!--Slf4j-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
-        </dependency>
-        <!--Jackson-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.11.0</version>
-        </dependency>
+
     </dependencies>
 
     <build>
