--- a/user/pom.xml
+++ b/user/pom.xml
@@ -57,6 +57,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
         <!-- jackson -->
         <dependency>
