--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>libs</module>
         <module>gateway</module>
         <module>eureka</module>
+        <module>backup</module>
     </modules>
 
 </project>
